# app-install

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  RELEASE  TOOLS  autogen.sh  configure.ac
contrib/: Makefile.am  app-install-generate-apt.pl  app-install-generate-pisi.py  app-install-generate-yum.py  app-install.spec  app-install.spec.in
data/: Makefile.am
docs/: Makefile.am  app-install-v1.txt  app-install-v2.txt
etc/: Makefile.am  app-install.conf
po/: POTFILES.in
src/: .gitignore  Makefile.am  ai-add.c  ai-admin.c  ai-common.h  ai-create.c  ai-database.c  ai-database.h  ai-extract-package.c  ai-generate.c  ai-query.c  ai-remove.c  ai-result.c  ai-result.h  ai-self-test.c  ai-utils.c  ai-utils.h  app-install-add.c  app-install-common.h  app-install-create.c  app-install-generate.c  app-install-remove.c
